--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <hr class="title_line">
         <div class="member">
             <div class="karina">
-                <a href="https://htmlpreview.github.io/?https://github.com/nessasunjaya/nessasunjaya.aespa/blob/main/members.html#karina"><div><img src="Assets/members/karina.jpg" alt=""></div>
+                <a href="members.html#karina"><div><img src="Assets/members/karina.jpg" alt=""></div>
                 <div><p>KARINA</p></div></a>
             </div>
             <div class="giselle">
-                <a href="https://htmlpreview.github.io/?https://github.com/nessasunjaya/nessasunjaya.aespa/blob/main/members.html#giselle"><div><img src="Assets/members/giselle.jpg" alt=""></div>
+                <a href="members.html#giselle"><div><img src="Assets/members/giselle.jpg" alt=""></div>
                 <div><p>GISELLE</p></div></a>
             </div>
             <div class="winter">
-                <a href="https://htmlpreview.github.io/?https://github.com/nessasunjaya/nessasunjaya.aespa/blob/main/members.html#winter" alt=""></div>
+                <a href="members.html#winter" alt=""></div>
                 <div><p>WINTER</p></div></a>
             </div>
             <div class="ningning">
-                <a href="https://htmlpreview.github.io/?https://github.com/nessasunjaya/nessasunjaya.aespa/blob/main/members.html#ningning" alt=""></div>
+                <a href="members.html#ningning" alt=""></div>
                 <div><p>NINGNING</p></div></a>
             </div>            
         </div>
