--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                 <div><p>GISELLE</p></div></a>
             </div>
             <div class="winter">
-                <a href="members.html#winter" alt=""></div>
+                <a href="members.html#winter" alt=""><img src="Assets/members/winter.jpg" alt=""></div>
                 <div><p>WINTER</p></div></a>
             </div>
             <div class="ningning">
-                <a href="members.html#ningning" alt=""></div>
+                <a href="members.html#ningning" alt=""><img src="Assets/members/ningning.jpg" alt=""></div>
                 <div><p>NINGNING</p></div></a>
             </div>            
         </div>
